--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-hero></app-hero>
 <app-about-us></app-about-us>
+<app-expirience></app-expirience>
+<app-exp-personal></app-exp-personal>
 <app-footer></app-footer>
