--- a/frontend/src/app/layouts/about-us/about-us.component.html
+++ b/frontend/src/app/layouts/about-us/about-us.component.html
@@ -1,8 +1,7 @@
-<section class="is-flex is-flex-direction-column is-justify-content-flex-start is-align-items-center">
-
+<section id="aboutus">
 
     <div class="is-flex is-flex-direction-column is-justify-content-flex-start is-align-items-center">
-        <h2 style="letter-spacing: 1rem; margin-left: 1rem;">NOSOTROS</h2>
+        <h2>NOSOTROS</h2>
         <p>
             Un copy cercano como hablandole a un amigo. Lorem ipsum dolor sit amet, consectetuer
             adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
@@ -15,5 +14,5 @@
     </div>
 
    <app-carousel></app-carousel>
-
+    <hr>
 </section>
