--- a/frontend/src/app/layouts/hero/hero.component.css
+++ b/frontend/src/app/layouts/hero/hero.component.css
@@ -1,4 +1,4 @@
-section {
+main {
     background-image: url('../../../assets/images/header.png');
     background-size: cover;
     background-position: center;
