--- a/frontend/src/app/layouts/hero/hero.component.html
+++ b/frontend/src/app/layouts/hero/hero.component.html
@@ -1,4 +1,4 @@
-<section class="hero is-fullheight">
+<main id="inicio" class="hero is-fullheight">
 
   <div class="hero-head" style="height: 20vh;">
     <header class="navbar" style="height: 20vh;">
@@ -16,11 +16,11 @@
         </div>
         <div id="navbarMenuHeroC" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item"> Inicio </a>
-            <a class="navbar-item"> Nosotros </a>
-            <a class="navbar-item"> Viajes </a>
-            <a class="navbar-item"> Blogs </a>
-            <a class="navbar-item"> Contacto </a>
+            <a href="#inicio" class="navbar-item"> Inicio </a>
+            <a href="#aboutus" class="navbar-item"> Nosotros </a>
+            <a href="#exp" class="navbar-item"> Viajes </a>
+            <a href="#" class="navbar-item"> Blogs </a>
+            <a href="#" class="navbar-item"> Contacto </a>
           </div>
         </div>
       </div>
@@ -58,4 +58,4 @@
     </button>
   </div>
 
-</section>
+</main>
