--- a/frontend/src/app/components/carousel/carousel.component.css
+++ b/frontend/src/app/components/carousel/carousel.component.css
@@ -1,4 +1,6 @@
-.carousel {
+.carousel {   
+    margin: 0;
+    padding: 0;
     width: 100vw;
     position: relative;   
     display: flex;
@@ -9,12 +11,45 @@
     min-height: 50vh;
 }
 
-.carousel>.back {
+.carousel>.back {   
     position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
     min-height: 50vh;
+    padding-top: 5vh;
+    padding-left:calc(50% - var(--app-width) / 2 - 0.5rem);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;   
+}
+
+.carousel>.back figure{ 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: auto; 
+}
+
+.carousel>.back figure:first-child{
+    margin:0 2rem 0 0;    
+}
+
+.carousel>.back figure:first-child a{
+    margin-right: 2rem;
+    display: inline;
+}
+
+.carousel>.back figure a{
+    color: var(--app-p-color);
+    display: none;
+}
+
+.carousel>.back img{
+    height: 40vh;
+    min-width: 40vh;
 }
 
 .carousel>.cover {
@@ -23,56 +58,17 @@
     left: 0;
     width: 100vw;
     height: 40vh;
-}
-
-.back{
-    padding-top: 5vh;
-    padding-left:calc(50% - var(--app-width) / 2);
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;   
-}
-.back figure{  
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: auto;  
-}
-
-.back figure:first-child{
-    margin-right: 2rem;
-}
-
-.back figure:first-child a{
-    margin-right: 2rem;
-    display: inline;
-}
-
-.back figure a{
-    color: #d09b48;
-    display: none;
-}
-
-.back img{
-    height: 40vh;
-    min-width: 40vh;
-}
-
-.cover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(247,247,247,1) 93%, rgba(0,0,0,1) 100%); 
-    height: 100%;
+    background: linear-gradient(90deg, rgba(255,255,255,0) 82%, rgba(91,91,91,1) 93%, rgba(0,0,0,1) 100%); 
     z-index: 1;    
 }
 
-.cover a {
-    background-color: #d09b48;
+.carousel>.cover a {
+    background-color: var(--app-p-color);
     text-align: center;
     padding: 0.3rem;
     margin: 0;
@@ -82,16 +78,16 @@
     transition: all 0.85s ease;    
 }
 
-.cover button{
-    margin-right: 1rem;
+.carousel>.cover button{
+    margin-right: 3rem;
 }
 
 @media(max-width:1044px){   
-    .back{
+    .carousel>.back{
         padding-top: 5vh;
-        padding-left: 2.5rem;
+        padding-left: 2rem;
     }
-    .cover a {  
+    .carousel>.cover a {  
         margin-left: 3rem;    
     }
 }
