--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,4 +2,8 @@
 <app-about-us></app-about-us>
 <app-expirience></app-expirience>
 <app-exp-personal></app-exp-personal>
+<app-blog></app-blog>
+<app-form></app-form>
+<app-sponsor></app-sponsor>
+<app-contact></app-contact>
 <app-footer></app-footer>
