--- a/frontend/src/app/layouts/hero/hero.component.html
+++ b/frontend/src/app/layouts/hero/hero.component.html
@@ -40,7 +40,7 @@
   </div>
 
   <div *ngIf="!isMobile" class="hero-foot is-flex is-flex-direction-row is-justify-content-center is-align-items-flex-start" style="height: 30vh;">
-    <app-add *ngFor="let add of adds" [url]="add.url" [text]="add.text"></app-add>
+    <app-add *ngFor="let add of adds" [add]="add"></app-add>
   </div>
 
   <div *ngIf="isMobile"
@@ -50,7 +50,7 @@
         <path d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
       </svg>
     </button>
-    <app-add [url]="adds[index].url" [text]="adds[index].text"></app-add>
+    <app-add [add]="adds[index]"></app-add>
     <button (click)="goForward()">
       <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#5f6368">
         <path  d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
