--- a/frontend/src/app/layouts/contact/contact.component.html
+++ b/frontend/src/app/layouts/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="contact">
     <div>
         <h3>Suscríbete a nuestro newsletter y recibe noticias, descuentos y más</h3>
         <input type="email" name="" id="" placeholder="Correo electrónico">
