--- a/frontend/src/app/layouts/blog/blog.component.html
+++ b/frontend/src/app/layouts/blog/blog.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="blog">
     <h2 style="color: #FFF; padding-top: 2rem;">BLOG</h2>
     <div class="blog">
         <div class="columns">
