--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,30 @@
-<p>footer works!</p>
+<section>
+    <div>
+        <div>
+            <figure>
+                <img src="../../../assets/images/logo.png" alt="">
+            </figure>
+            <figure>
+                <img src="../../../assets/images/logos_redes.png" alt="">
+            </figure>
+        </div>
+        <div>
+            <a href="#quienes-somos">¿Quiénes somos?</a>
+            <a href="#viajes-grupales">Viajes grupales</a>
+            <a href="#viajes-medida">Viajes a la medida</a>
+            <a href="#contacto">Contáctanos</a>
+            <a href="#alianzas">Alianzas estratégicas</a>
+            <a href="#blogs">Blogs</a>
+            <a href="#terminos">Términos y condiciones</a>
+            <a href="#privacidad">Política de privacidad</a>
+            <a href="#rnt">Registro Nacional de Turismo</a>
+        </div>
+        <div>
+            <a href="mailto:info@allintravels.com">📧 info@allintravels.com</a>
+            <a href="tel:+576044444583">📞 0057 (604) 444 45 83</a>
+            <a href="https://www.google.com/maps?q=Carrera+43A+%23+18+Sur+-+135+Of+834,+Sao+Paulo+Plaza+Medellín+-+Colombia"
+                target="_blank">📍 Carrera 43A # 18 Sur - 135 Of 834, Sao Paulo Plaza Medellín - Colombia</a>
+
+        </div>
+    </div>
+</section>
