--- a/frontend/src/app/layouts/hero/hero.component.html
+++ b/frontend/src/app/layouts/hero/hero.component.html
@@ -19,8 +19,8 @@
             <a href="#inicio" class="navbar-item"> Inicio </a>
             <a href="#aboutus" class="navbar-item"> Nosotros </a>
             <a href="#exp" class="navbar-item"> Viajes </a>
-            <a href="#" class="navbar-item"> Blogs </a>
-            <a href="#" class="navbar-item"> Contacto </a>
+            <a href="#blog" class="navbar-item"> Blogs </a>
+            <a href="#contact" class="navbar-item"> Contacto </a>
           </div>
         </div>
       </div>
