--- a/frontend/src/app/layouts/about-us/about-us.component.html
+++ b/frontend/src/app/layouts/about-us/about-us.component.html
@@ -1,18 +1,10 @@
-<section id="aboutus">
+<section id="aboutus" *ngFor="let c of companies">
 
     <div class="is-flex is-flex-direction-column is-justify-content-flex-start is-align-items-center">
         <h2>NOSOTROS</h2>
-        <p>
-            Un copy cercano como hablandole a un amigo. Lorem ipsum dolor sit amet, consectetuer
-            adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-            aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-            ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum
-            iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
-            feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-            luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        </p>
+        <p>{{c.description}}</p>
     </div>
 
-   <app-carousel></app-carousel>
+   <app-carousel [company]="c"></app-carousel>
     <hr>
 </section>
