--- a/frontend/src/app/layouts/expirience/expirience.component.html
+++ b/frontend/src/app/layouts/expirience/expirience.component.html
@@ -1,20 +1,35 @@
 <section id="exp">
     <h2>EXPERIENSAS GRUPALES</h2>
-    <div>
-        <button>
-            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#d09b48" transform="scale(-1,1)">
-                <path d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
-              </svg>
-        </button>
-        <div class="card-container">
-            <app-card-experience></app-card-experience>
-            <app-card-experience></app-card-experience>
-            <app-card-experience></app-card-experience>
+    
+    <div class="container gaps">
+
+        <div class="columns">
+            <div *ngIf="!isMobile" class="column">
+                <app-card-experience *ngFor="let t of travels" [travel]="t"></app-card-experience>
+            </div>
         </div>
-        <button>
-            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#d09b48">
-            <path  d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
-          </svg>
+        
+        <div *ngIf="isMobile" class="mobile">
+            <app-card-experience [travel]="travels[index]"></app-card-experience>
+        </div>
+
+    </div>
+
+    <div class="cover">
+        <button id="exp-left" (click)="goForward()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#d09b48"
+                transform="scale(-1,1)">
+                <path
+                    d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
+            </svg>
         </button>
-    </div>   
+
+        <button id="exp-right" (click)="goBack()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#d09b48">
+                <path
+                    d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
+            </svg>
+        </button>
+    </div>    
+
 </section>
