--- a/frontend/src/app/layouts/footer/footer.component.css
+++ b/frontend/src/app/layouts/footer/footer.component.css
@@ -1,26 +1,26 @@
 section>div{
+    padding: 2.5rem 0;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    align-items: flex-start;
 }
 
-
-section>div>div{
+.footer-content{
+    padding: 2.5rem 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start; 
-    margin-left: 10%;
-    margin-top: 5rem;
-    margin-bottom: 5rem; 
+    align-items: flex-start;
+    margin-left: 5rem;
 }
 
-section>div>div>a{
+a{
     color: black;
     font-size: 0.75rem;
 }
 
 figure{
+    min-width: 15rem;
     width: 15vw;
 }
