--- a/frontend/src/app/layouts/hero/hero.component.css
+++ b/frontend/src/app/layouts/hero/hero.component.css
@@ -1,5 +1,5 @@
 main {
-    background-image: url('../../../assets/images/header.png');
+    /* background-image: url('https://api.test.interactiva.net.co/media/header.png'); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
