--- a/frontend/src/app/layouts/sponsor/sponsor.component.html
+++ b/frontend/src/app/layouts/sponsor/sponsor.component.html
@@ -4,5 +4,6 @@
         <figure *ngFor="let logo of logos">
             <img  [src]="logo">
         </figure>
-    </div>   
+    </div>  
+    <a href="#"><img src="../../../assets/images/logo_WA.png"></a> 
 </section>
