--- a/frontend/src/app/components/card-blog/card-blog.component.css
+++ b/frontend/src/app/components/card-blog/card-blog.component.css
@@ -7,12 +7,19 @@ article{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;  
-}
+    align-items: flex-start;    
+}   
 
 .card-picture{
+    width: 100%;
     border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    border-top-right-radius: 1rem;    
+}
+
+.card-picture img{
+    width: 100%;
+    max-height: 50vh;
+    object-fit: cover;
 }
 
 .card-content{
