--- a/frontend/src/app/components/carousel/carousel.component.html
+++ b/frontend/src/app/components/carousel/carousel.component.html
@@ -2,11 +2,11 @@
     <div class="back">        
         <figure *ngFor="let photo of photos; let i = index;">
             <img  [src]="photos[i]">
-            <a><span>&#64;</span>churroceballos</a>
+            <a  [href]="'https://instagram.com/'+company?.instagram_account">{{company?.instagram_account}}</a>
         </figure>
     </div>
     <div class="cover">
-        <a>
+        <a [href]="'https://instagram.com/'+company?.instagram_account">
             <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 2C4.24 2 2 4.24 2 7V17C2 19.76 4.24 22 7 22H17C19.76 22 22 19.76 22 17V7C22 4.24 19.76 2 17 2H7ZM7 4H17C18.66 4 20 5.34 20 7V17C20 18.66 18.66 20 17 20H7C5.34 20 4 18.66 4 17V7C4 5.34 5.34 4 7 4ZM17.5 5C16.67 5 16 5.67 16 6.5C16 7.33 16.67 8 17.5 8C18.33 8 19 7.33 19 6.5C19 5.67 18.33 5 17.5 5ZM12 7C9.24 7 7 9.24 7 12C7 14.76 9.24 17 12 17C14.76 17 17 14.76 17 12C17 9.24 14.76 7 12 7ZM12 9C13.66 9 15 10.34 15 12C15 13.66 13.66 15 12 15C10.34 15 9 13.66 9 12C9 10.34 10.34 9 12 9Z" fill="white"/>
             </svg>  
