--- a/frontend/src/app/layouts/blog/blog.component.css
+++ b/frontend/src/app/layouts/blog/blog.component.css
@@ -1,15 +1,12 @@
-section{   
+section{    
     background-color: var(--app-p-color);
+    padding-bottom: 5rem;
 }
 
-.blog{
-    width: 100%;
-    padding: 1rem calc(50% - var(--app-width-exp)/2 - 1rem)  4rem  calc(50% - var(--app-width-exp)/2 - 1rem);  
-}
-
-.blog>div>div{
+.column:last-child{
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;    
+    flex-wrap: wrap;
+    justify-content:space-between;
+    
 }
