--- a/frontend/src/app/layouts/blog/blog.component.html
+++ b/frontend/src/app/layouts/blog/blog.component.html
@@ -1,11 +1,11 @@
 <section id="blog">
-    <h2 style="color: #FFF; padding-top: 2rem;">BLOG</h2>
-    <div class="blog">
+    <h2 style="color: #FFF; padding-top: 2rem; margin-bottom: 1rem;">BLOG</h2>
+    <div class="container gaps">
         <div class="columns">
             <div class="column">
-               <app-card-blog [blog]="blogs[0]"></app-card-blog>
+                <app-card-blog [blog]="blogs[0]"></app-card-blog>                
             </div>
-            <div class="column">
+            <div class="column"> 
                 <app-card-blog [blog]="blogs[1]"></app-card-blog>
                 <app-card-blog [blog]="blogs[2]"></app-card-blog>
             </div>
