--- a/frontend/src/app/layouts/hero/hero.component.html
+++ b/frontend/src/app/layouts/hero/hero.component.html
@@ -1,11 +1,10 @@
-<main id="inicio" class="hero is-fullheight">
-
+<main id="inicio" class="hero is-fullheight" [ngStyle]="{'background-image': 'url(' + urlBg + ')'}">
   <div class="hero-head" style="height: 20vh;">
     <header class="navbar" style="height: 20vh;">
       <div class="container" style="height: 20vh; padding: 0;">
         <div class="navbar-brand">
           <a class="navbar-item">
-            <img src="../../../assets/images/logo.png" alt="Logo" />
+            <img src="https://api.test.interactiva.net.co/media/logo.png" alt="Logo" />
           </a>
           <span id="burger" class="navbar-burger" data-target="navbarMenuHeroC">
             <span></span>
@@ -31,7 +30,7 @@
     <div class="container is-flex is-flex-direction-column is-justify-content-flex-end is-align-content-center"
       style="height: 100%; width: 100%;">
       <p class="has-text-centered" style="color: #FFF; font-size: 4rem; font-weight: 900;">
-        <span style="margin-left: 1.5rem; letter-spacing: 1.5rem;">THE TRAVEL</span>
+        <span style="margin-left: 1.5rem; letter-spacing: 1.5rem;">{{title}}</span>
       </p>
       <p class="has-text-centered"  style="color: #d09b48; font-size: 1.5rem; font-weight: 800;">
         <span style="margin-left: 2.2rem; letter-spacing: 2.2rem; ">EXPERIENCE</span>
@@ -40,17 +39,17 @@
   </div>
 
   <div *ngIf="!isMobile" class="hero-foot is-flex is-flex-direction-row is-justify-content-center is-align-items-flex-start" style="height: 30vh;">
-    <app-add *ngFor="let add of adds" [add]="add"></app-add>
+    <app-card-category *ngFor="let category of categories" [category]="category"></app-card-category>
   </div>
 
   <div *ngIf="isMobile"
     class="hero-foot is-flex is-flex-direction-row is-justify-content-center is-align-items-flex-start" style="height: 30vh;">
-    <button (click)="goBackward()">
+    <button (click)="goBack()">
       <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#5f6368" transform="scale(-1,1)">
         <path d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
       </svg>
     </button>
-    <app-add [add]="adds[index]"></app-add>
+    <app-card-category [category]="categories[index]"></app-card-category>
     <button (click)="goForward()">
       <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#5f6368">
         <path  d="M507-480 384-357l56 57 180-180-180-180-56 57 123 123ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
