--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -20,10 +20,10 @@
             <a href="#rnt">Registro Nacional de Turismo</a>
         </div>
         <div class="footer-content">
-            <a href="mailto:info@allintravels.com">infoallintravels.com</a>
-            <a href="tel:+576044444583"> 0057 (604) 444 45 83</a>
+            <a href="mailto:info@allintravels.com"> <span><img src="../../../assets/images/icono_mail.png" alt="logo" srcset=""></span> infoallintravels.com</a>
+            <a href="tel:+576044444583"><span><img src="../../../assets/images/icono_telefono.png" alt="logo" srcset=""></span> 0057 (604) 444 45 83</a>
             <a href="https://www.google.com/maps?q=Carrera+43A+%23+18+Sur+-+135+Of+834,+Sao+Paulo+Plaza+Medellín+-+Colombia"
-                target="_blank">Carrera 43A # 18 Sur - 135 Of 834, <br> Sao Paulo Plaza Medellín - Colombia</a>
+                target="_blank"><span><img src="../../../assets/images/icono_ubicacion.png" alt="logo" srcset=""></span> Carrera 43A # 18 Sur - 135 Of 834, <br> <span style="margin-left: 1.25rem;">Sao Paulo Plaza Medellín - Colombia</span> </a>
 
         </div>
     </div>
